k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airline
  labels:
    name: airline
    app: airline-tracker
